--- a/src/features/game/components/header/Header.module.css
+++ b/src/features/game/components/header/Header.module.css
@@ -4,14 +4,18 @@
   padding: 0.8rem;
   justify-content: center;
 
-  background-color: black;
   font-size: 1.6rem;
 }
 
 .score {
-  > span {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+
+  > * {
     display: inline-block;
     min-width: 6rem;
     color: white;
+    font-size: 2.2rem;
   }
 }
