--- a/src/features/game/components/positions/Position.module.css
+++ b/src/features/game/components/positions/Position.module.css
@@ -1,101 +1,42 @@
 .position {
-  --mix-color: color-mix(in srgb, var(--color) 90%, black 10%);
-
-  position: relative;
-  width: 280px;
-  height: 240px;
+  width: 240px;
+  aspect-ratio: 3 / 5;
   display: flex;
   flex-direction: column;
-  padding: 50px;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  z-index: 1;
-  border: 3px solid var(--mix-color);
-  color: var(--mix-color);
-
-  button {
-    position: absolute;
-    top: 20%;
-    font-size: 2rem;
-    border-radius: 50%;
-    padding: 0.5rem;
-    text-align: center;
-    padding: 0;
-    width: 40px;
-    height: 40px;
-    transition: opacity 0.3s ease-in-out;
-    opacity: 0;
-
-    > span {
-      margin: auto;
-    }
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    inset: 0;
-    z-index: -1;
-    background-color: var(--color);
-    filter: brightness(0.52) opacity(0.5);
-  }
-
-  &:hover {
-    > button {
-      opacity: 1;
-    }
-  }
-
-  > div:first-of-type {
-    display: flex;
-
-    transition: opacity 0.3s ease-out;
-  }
+  padding: 2rem 1rem 1rem;
+  color: black;
+  border: 2px solid black;
+  border-radius: var(--border-radius);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 12rem;
+  cursor: pointer;
+  font-weight: bold;
 }
 
 .rock {
-  --color: var(--rock-color);
+  background-image: url("./rock.png");
 }
 
 .paper {
-  --color: var(--paper-color);
+  background-image: url("./paper.png");
 }
 
 .scissors {
-  --color: var(--scissors-color);
+  background-image: url("./scissors.png");
 }
 
 .label {
-  font-size: 2.8rem;
-}
-
-.descreaseButton {
-  left: 12px;
-}
-
-.increaseButton {
-  right: 12px;
+  font-size: 2.2rem;
+  color: black;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 .increaseButtonCentered {
   right: 50%;
   transform: translateX(50%);
-}
-
-.betAmount {
-  font-size: 1.4rem;
-  border-radius: 50%;
-  border: 4px solid #0000e2;
-  background-color: white;
-  color: black;
-  width: 5.5rem;
-  line-height: 5rem;
-  aspect-ratio: 1;
-  place-items: center;
-  margin-bottom: 1.6rem;
-  display: grid;
-}
-
-.betAmountHidden {
-  visibility: hidden;
 }
